--- a/_includes/scripts/mathjax.html
+++ b/_includes/scripts/mathjax.html
@@ -3,10 +3,22 @@
   <script type="text/javascript">
     window.MathJax = {
       tex: {
-        tags: 'ams'
+        tags: 'ams',
+        inlineMath: [['$', '$'], ["\\(", "\\)"]],
+        processEscapes: true,
+        macros: {      /* https://docs.mathjax.org/en/latest/input/tex/macros.html */
+          Rr: "{\\mathbb R}",
+          bold: ["{\\bf #1}", 1]
+        }
       }
+      
+    
     };
   </script>
   <script defer type="text/javascript" id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@{{ site.mathjax.version }}/es5/tex-mml-chtml.js"></script>
   <script defer src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+
+
+ 
+
   {%- endif %}
