--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -113,7 +113,7 @@
         {% if entry.type == "article" -%}
           {%- capture entrytype -%}<em>{{entry.journal}}</em>{%- endcapture -%}
         {%- elsif proceedings contains entry.type -%}
-          {%- capture entrytype -%}<em>In {{entry.booktitle}}</em> {%- endcapture -%}
+          {%- capture entrytype -%}In {{entry.editor}}, <em>{{entry.booktitle}}</em>, {{entry.series}}, {{entry.volume}}, {{entry.pages}} {%- endcapture -%}
         {%- elsif thesis contains entry.type -%}
           {%- capture entrytype -%}<em>{{entry.school}}</em> {%- endcapture -%}
         {%- else -%}
