--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -87,7 +87,7 @@ blockquote {
   background-color: var(--global-card-bg-color);
 
   img {
-    width: 100%;
+    width: 300pt;
   }
 
   .card-title {
