added research page and pages about Ma4 and Ma151a. Updated publication list.

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,4 +1,6 @@
-<!-- _includes/projects.html -->
+
+
+<!-- _includes/projects.html Original code -->
 <div class="grid-sizer"></div>
 <div class="grid-item">
   {% if project.redirect -%}
@@ -33,4 +35,4 @@
         </div>
       </div>
     </a>
-</div>
+</div> 
