--- a/_includes/scripts/mathjax.html
+++ b/_includes/scripts/mathjax.html
@@ -7,8 +7,36 @@
         inlineMath: [['$', '$'], ["\\(", "\\)"]],
         processEscapes: true,
         macros: {      /* https://docs.mathjax.org/en/latest/input/tex/macros.html */
-          Rr: "{\\mathbb R}",
-          bold: ["{\\bf #1}", 1]
+          salg: "{\\mathfrak}", 
+          Rr: "{\\mathbb{R}}", 
+          Cc: "{\\mathbb{C}}", 
+          Nn: "{\\mathbb{N}}", 
+          Qq: "{\\mathbb{Q}}", 
+          Zz: "{\\mathbb{Z}}", 
+          Ff: "{\\mathbb{F}}", 
+          Ex: "{\\mathbin{\\mathbb{E}}}", 
+          Pr: "{\\mathbin{\\mathbb{P}}}", 
+          Var: "{\\mathbin{\\mathbf{Var}}}", 
+          Tr: ["{\\operatorname{Tr}\\left( #1\\right)}", 1], 
+          Bin: "{\\operatorname{Bin}}", 
+          Ber: "{\\operatorname{Ber}}", 
+          Hom: "{\\operatorname{Hom}}", 
+          Ext: "{\\operatorname{Ext}}", 
+          Tor: "{\\operatorname{Tor}}", 
+          ker: "{\\operatorname{ker}}", 
+          coker: "{\\operatorname{coker}}", 
+          im: "{\\operatorname{im}}", 
+          coim: "{\\operatorname{coim}}", 
+          monic: "{\\rightarrowtail}", 
+          epic: "{\\twoheadrightarrow}", 
+          tr: "{^{\\rm T}}", 
+          rank: "{\\operatorname{rank}}", 
+          id: "{\\operatorname{id}}", 
+          Ob: "{\\operatorname{Ob}}", 
+          Mor: "{\\operatorname{Mor}}", 
+          sheaf: ["{\\mathcal{#1}}", 1], 
+          cat: ["{\\mathbf{#1}}", 1], 
+          vol: "{\\operatorname{vol}}"
         }
       }
       
