--- a/_includes/selected_papers.html
+++ b/_includes/selected_papers.html
@@ -1,4 +1,4 @@
 
           <div class="publications">
-            {% bibliography -f {{ site.scholar.bibliography }} -q @*[selected=true]* %}
+            {% bibliography -f {{ site.scholar.mybibliography }} -T bib_publications  -q @*[selected=true]* %}
           </div>
